--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,30 @@
     <version>2.6</version>
   </dependency>
   
+  <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.4</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.github.ozlerhakan</groupId>
+    <artifactId>poiji</artifactId>
+    <version>1.13</version>
+ </dependency>
+ 
+ <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.9</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
+</dependency>
+  
   </dependencies>
   
 
